--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+header {
+  background-color: #fff8f3;
+  padding: 40px 170px;
+}
 .nav-heading {
   font-size: 45px;
   font-style: normal;
@@ -36,7 +40,7 @@ body {
   line-height: normal;
 }
 
-.menu .btn {
+.btn-primary {
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
@@ -45,4 +49,44 @@ body {
   border: none;
   padding: 18px 35px;
   border-radius: 5px;
+}
+
+.banner {
+  margin-top: 120px;
+  display: flex;
+  align-items: center;
+}
+.banner > div {
+  width: 662px;
+}
+
+.banner-greeting {
+  color: #474747;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.person-name {
+  font-size: 85px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #181818;
+}
+.person-info {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  color: #757575;
+  margin: 15px 0 20px;
+}
+.button-group > button {
+  margin-left: 10px;
+}
+
+.banner .profile-picture {
+  width: 584px;
+  height: 676px;
 }
