--- a/style.css
+++ b/style.css
@@ -11,14 +11,18 @@
 body {
   font-family: "Open Sans", sans-serif;
 }
+
+/* Header styles */
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  padding: 40px 170px;
 }
 header {
   background-color: #fff8f3;
-  padding: 40px 170px;
 }
 .nav-heading {
   font-size: 45px;
@@ -55,9 +59,11 @@ header {
   margin-top: 120px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 40px 0px 40px 170px;
 }
 .banner > div {
-  width: 662px;
+  width: 500px;
 }
 
 .banner-greeting {
@@ -89,4 +95,93 @@ header {
 .banner .profile-picture {
   width: 584px;
   height: 676px;
+  background: url(images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+/* Main section styles */
+
+/* About section styles */
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px 230px;
+}
+.section-title {
+  text-align: center;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #181818;
+}
+
+.section-description {
+  text-align: center;
+  color: #757575;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 40px 0;
+}
+
+.about-infos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about-info {
+  margin-left: 50px;
+}
+
+.title {
+  color: #757575;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 15px;
+}
+.title-value {
+  color: #474747;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+/* What I do section styles */
+.what-i-do {
+  padding: 130px 230px;
+}
+.skills {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.skill {
+  padding: 30px;
+  width: 267px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+  margin: 30px 0;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #181818;
+}
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
 }
