Summary section added

--- a/style.css
+++ b/style.css
@@ -185,3 +185,72 @@ header {
   font-weight: 400;
   line-height: 28px;
 }
+
+/* summary section styles */
+
+.summary {
+  padding: 130px 230px;
+}
+
+.contents {
+  display: flex;
+  margin-top: 115px;
+}
+.my-education,
+.my-experience {
+  display: flex;
+  flex-direction: column;
+}
+.my-experience {
+  margin-left: 60px;
+}
+
+.border-top-bottom {
+  border-top: 1px solid #d1d1d1;
+  border-bottom: 1px solid #d1d1d1;
+  margin: 30px 0;
+  padding: 30px 0;
+}
+.content-title {
+  color: #474747;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+}
+
+.education-title,
+.experience-title {
+  color: #474747;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.university,
+.company {
+  color: #757575;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.edu-description,
+.exp-description {
+  color: #757575;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+  margin-top: 20px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
