--- a/style.css
+++ b/style.css
@@ -254,3 +254,55 @@ header {
   align-items: center;
   margin-top: 50px;
 }
+
+/* Contact section styles */
+.footer {
+  padding: 130px 230px;
+  background: #fff8f3;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+.footer-column {
+  width: 50%;
+}
+
+.footer-heading {
+  color: #181818;
+  font-size: 35px;
+  font-weight: 700;
+}
+.footer-description {
+  color: #474747;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 20px 0;
+  line-height: 28px; /* 175% */
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  display: block;
+  border-radius: 5px;
+  background: #fff;
+  border: none;
+  padding: 18px 30px;
+  width: 100%;
+  margin-bottom: 30px;
+  outline: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+input[submit] {
+  display: inline;
+}
+.contact-form > input {
+  margin-top: 25px;
+}
+.contact-form textarea {
+  resize: none;
+}
